hs-bindgen/examples/failing/fixedarray_res_a.h
int[3] fun_1(int x)
